fix mobile spacing

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,6 +1,6 @@
 @import "~bulma/sass/utilities/initial-variables"
 @import url(https://fonts.googleapis.com/css?family=Work+Sans:200,400,600,800)
-@import url(https://fonts.googleapis.com/css?family=Rock+3D:200,400,600,800)
+@import url(https://fonts.googleapis.com/css?family=Syne+Mono:200,400,600,800)
 
 // Config vars
 // Kaldi logo brand color: #FD461E
@@ -56,10 +56,10 @@ body
   color: #484646 !important
 
 .navbar-brand
-  font-family: 'Rock 3D', sans-serif !important
+  font-family: 'Syne Mono', sans-serif !important
 
 .blog-title
-  font-family: 'Rock 3D', sans-serif !important
+  font-family: 'Syne Mono', sans-serif !important
 
 .navbar
   // border-bottom: 3px double #484646
